# sme-business-coach

./: README.md  pyproject.toml  report.md  streamlit_app.py
src/sme_business_coach/: crew.py  main.py
src/sme_business_coach/config/: agents.yaml  tasks.yaml
